feat(add_edit_option_list): méthode pour assigner un id pour une nouvelle optionList